# dbf2parquetC

./: .gitignore  CMakeLists.txt  README.md  build_instructions.md
src/: arrow_writer.c  arrow_writer.h  dbf_reader.c  dbf_reader.h  encoding.c  encoding.h  main.c
